--- a/am-shared/tools-mt-apertium-dir-include.am
+++ b/am-shared/tools-mt-apertium-dir-include.am
@@ -98,6 +98,7 @@ generator-mt-gt-norm.tmp.hfst: $(top_builddir)/src/generator-raw-gt-desc.hfst \
 			$(top_builddir)/src/filters/remove-number-string-tags.hfst        \
 			$(top_builddir)/src/filters/remove-NG-strings.hfst                \
 			$(top_builddir)/src/filters/remove-usage-tags.hfst                \
+			$(top_builddir)/src/filters/remove-semantic-tags.hfst                \
 			$(top_builddir)/src/filters/remove-sub-forms.hfst                 \
 			$(top_builddir)/src/filters/remove-orthography-tags.hfst          \
 			$(top_builddir)/src/filters/remove-Orth_IPA-strings.hfst          \
@@ -114,6 +115,7 @@ generator-mt-gt-norm.tmp.hfst: $(top_builddir)/src/generator-raw-gt-desc.hfst \
 	.o. @\"$(top_builddir)/src/filters/remove-norm-comp-tags.hfst\"           \
 	.o. @\"$(top_builddir)/src/filters/remove-number-string-tags.hfst\"       \
 	.o. @\"$(top_builddir)/src/filters/remove-usage-tags.hfst\"               \
+	.o. @\"$(top_builddir)/src/filters/remove-semantic-tags.hfst\"               \
 	.o. @\"$(top_builddir)/src/filters/remove-sub-forms.hfst\"                \
 	.o. @\"$(top_builddir)/src/filters/remove-NG-strings.hfst\"               \
 	.o. @\"$(top_builddir)/src/filters/remove-orig_lang-tags.hfst\"           \
@@ -137,6 +139,7 @@ analyser-mt-gt-desc.tmp.hfst: $(top_builddir)/src/generator-raw-gt-desc.hfst \
 			$(top_builddir)/src/filters/remove-norm-comp-tags.hfst           \
 			$(top_builddir)/src/filters/remove-number-string-tags.hfst       \
 			$(top_builddir)/src/filters/remove-usage-tags.hfst               \
+			$(top_builddir)/src/filters/remove-semantic-tags.hfst               \
 			$(top_builddir)/src/filters/remove-hyphenation-marks.hfst        \
 			$(top_builddir)/src/filters/remove-infl_deriv-borders.hfst       \
 			$(top_builddir)/src/filters/remove-orthography-tags.hfst         \
@@ -151,6 +154,7 @@ analyser-mt-gt-desc.tmp.hfst: $(top_builddir)/src/generator-raw-gt-desc.hfst \
 	.o. @\"$(top_builddir)/src/filters/remove-norm-comp-tags.hfst\"           \
 	.o. @\"$(top_builddir)/src/filters/remove-number-string-tags.hfst\"       \
 	.o. @\"$(top_builddir)/src/filters/remove-usage-tags.hfst\"               \
+	.o. @\"$(top_builddir)/src/filters/remove-semantic-tags.hfst\"               \
 	.o. @\"$(top_builddir)/src/filters/remove-orig_lang-tags.hfst\"           \
 	.o. @\"$(top_builddir)/src/filters/remove-orthography-tags.hfst\"         \
 	.o. @\"$(top_builddir)/src/filters/remove-Orth_IPA-strings.hfst\"         \
@@ -203,13 +207,13 @@ analyser-mt-apertium-desc.%.tmp.hfst: \
 # Relabel GTD tags to Apertium tags - analyser:
 # % = TARGETLANG
 # Step 2a - apertium.tmp -> apertium
-#         - BOTH target language specific reordering AND relabeling
+#         - BOTH target language specific modifying AND relabeling
 analyser-mt-apertium-desc.%.hfst: analyser-mt-apertium-desc.%.tmp.hfst \
-								  tagsets/reorder-tags.%.hfst \
+								  tagsets/modify-tags.%.hfst \
 								  $(srcdir)/tagsets/apertium.%.relabel
 	$(AM_V_RGX2FST)$(PRINTF) "\
    		@\"$<\" \
-	.o. @\"tagsets/reorder-tags.$*.hfst\" \
+	.o. @\"tagsets/modify-tags.$*.hfst\" \
     	;" \
 		| $(HFST_REGEXP2FST) $(HFST_FLAGS) -S --harmonize-flags \
 		| $(HFST_SUBSTITUTE) $(HFSTFLAGS) \
@@ -231,6 +235,20 @@ analyser-mt-apertium-desc.%.hfst: analyser-mt-apertium-desc.%.tmp.hfst \
 # Relabel GTD tags to Apertium tags - analyser:
 # % = TARGETLANG
 # Step 2c - apertium.tmp -> apertium
+#         - ONLY target language specific modifying
+analyser-mt-apertium-desc.%.hfst: analyser-mt-apertium-desc.%.tmp.hfst \
+								  tagsets/modify-tags.%.hfst
+	$(AM_V_RGX2FST)$(PRINTF) "\
+   		@\"$<\" \
+	.o. @\"tagsets/modify-tags.$*.hfst\" \
+    	;" \
+		| $(HFST_REGEXP2FST) $(HFST_FLAGS) -S --harmonize-flags \
+		| $(HFST_FST2FST) $(HFSTFLAGS) -t \
+		-o $@
+
+# Relabel GTD tags to Apertium tags - analyser:
+# % = TARGETLANG
+# Step 2d - apertium.tmp -> apertium
 #         - NO target language specific processing - just copy
 analyser-mt-apertium-desc.%.hfst: analyser-mt-apertium-desc.%.tmp.hfst
 	$(AM_V_CP)cp -f $< $@
