--- a/giella-crj.pc.in
+++ b/giella-crj.pc.in
@@ -8,5 +8,5 @@ srcdir=${datadir}/giella/${gtlang}
 
 Name: giella-crj
 Description: Finite-state language processing tools for Southern East Cree
-URL: http://giellatekno.uit.no/doc/index.html
+URL: http://divvun.no/doc/index.html
 Version: @VERSION@
