--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -24,6 +24,7 @@ GT_LEXC_ROOT=$(srcdir)/root.lexc
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
 			 affixes/nouns.lexc \
+			 affixes/symbols.lexc     \
 			 affixes/verbs.lexc \
 			 stems/nouns.lexc \
 			 stems/numerals.lexc \
@@ -47,7 +48,8 @@ GT_LEXC_L2_SRCS=\
 			$(L2)
 
 # Set this to the names of all generated lexc files, if any
-GENERATED_LEXC_SRCS=generated_files/punctuation.lexc
+GENERATED_LEXC_SRCS=generated_files/punctuation.lexc \
+                    generated_files/symbols.lexc
 
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
