--- a/giella-crj.pc.in
+++ b/giella-crj.pc.in
@@ -7,5 +7,5 @@ srcdir=${datadir}/giella/${gtlang}
 
 Name: giella-crj
 Description: Finite-state language processing tools for Southern East Cree
-URL: http://divvun.no/doc/index.html
+URL: https://giellalt.uit.no/index.html
 Version: @VERSION@
