--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Southern East Cree NLP Grammar
 description: Finite state and Constraint Grammar based analysers, proofing tools and other resources
+plugins:
+  - jemoji
