--- a/manifest.toml.in
+++ b/manifest.toml.in
@@ -1,6 +1,18 @@
 name = "Southern East Cree"
 version = "@SPELLERVERSION@"
 
+# Name of the speller package in various languages.
+# The default is English + autonym:
+[speller.name]
+en = "@SPELLER_NAME_ENG@"
+crj = "@SPELLER_NAME_NATIVE@"
+
+# Description of the speller package in various languages.
+# The default is English + autonym:
+[speller.description]
+en = "@SPELLER_DESC_ENG@"
+crj = "@SPELLER_DESC_NATIVE@"
+
 [macos]
 system_pkg_id = "no.divvun.MacDivvun.crj"
 
